# VideoFFmpeg

./: .gitignore  CMakeLists.txt  MediaFFmpeg.cpp  MediaFFmpeg.h  main.cpp
include/libavutil/: ffversion.h
lib/: libavdevice.59.dylib  libavfilter.8.38.100.dylib  libavformat.59.dylib  libavutil.57.24.101.dylib  libswresample.4.6.100.dylib  libswscale.6.dylib
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
